Improved overall structure, adding GD dependencies