@@ -3,24 +3,44 @@ package ultimategdbot;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-
-import static java.util.stream.Collectors.joining;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Scanner;
+import java.util.stream.Collectors;
 
 public class Launcher {
 
-    public static void main(String[] args) throws IOException {
-        var launcherCmdPath = Path.of(args.length == 0 ? "." : args[0]);
-        if (Files.isDirectory(launcherCmdPath)) {
-            launcherCmdPath = launcherCmdPath.resolve("launcher.cmd");
-        }
+    public static void main(String[] args) throws IOException, InterruptedException {
+        var javaHome = Path.of(System.getProperty("java.home"));
         var processBuilder = new ProcessBuilder();
-        processBuilder.directory(launcherCmdPath.getParent().toFile());
-        var commandLine = Files.lines(launcherCmdPath)
-                .collect(joining("\n"))
-                .replace("\\\n", " ");
-        processBuilder.command(commandLine.split(" +"));
-        var process = processBuilder.start();
-        System.out.println(commandLine);
-        System.out.println("Bot started (PID: " + process.pid() + ")");
+        processBuilder.directory(javaHome.toFile());
+        var command = processBuilder.command();
+        command.add(javaHome.resolve(Path.of("bin", "java")).toString());
+        var jvmArgsTxt = javaHome.resolve("jvmArgs.txt");
+        List<String> jvmArgs;
+        if (Files.exists(jvmArgsTxt) && !(jvmArgs = Files.lines(jvmArgsTxt)
+                .filter(line -> !line.startsWith("#"))
+                .collect(Collectors.toList())).isEmpty()) {
+            command.addAll(jvmArgs);
+        }
+        command.add("-p");
+        command.add("modules");
+        command.add("-cp");
+        command.add(".");
+        command.add("--add-modules=ALL-MODULE-PATH");
+        command.add("-m");
+        command.add("ultimategdbot/ultimategdbot.Main");
+        System.out.println(String.join(" ", command));
+        var argsList = Arrays.asList(args);
+        if (argsList.contains("--detached")) {
+            var process = processBuilder.start();
+            System.out.println("The bot has been started and is running in the background. PID: " + process.pid());
+        } else {
+            processBuilder.inheritIO().start().waitFor();
+        }
+        if (!argsList.contains("--batch-mode")) {
+            System.out.println("Press Enter to exit...");
+            new Scanner(System.in).nextLine();
+        }
     }
 }
